Fix unknown horizontal white space on small device

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -70,3 +70,9 @@ pre, pre code, pre code * {
 .pocket-btn {
   display: inline-block;
 }
+
+@media screen and (max-width: 840px) {
+  .tooltip::after {
+    display: none !important;
+  }
+}
